# raytracer

./: CMakeLists.txt  Color.h  Light.h  Plane.cpp  README.md  Ray.h  Sphere.cpp  Sphere.h  Surface.h  Vector3.cpp  Vector3.h  View.cpp  View.h  test.cpp
src/: CMakeLists.txt  Color.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Surface.h  Vector3.cpp  Vector3.h  View.cpp  View.h  test.cpp
